--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
 
-        <a href="#"><section class="imagem" id="img01">
+        <a href="treino.html"><section class="imagem" id="img01">
 
             <p class="treino">Treino</p>
 
