--- a/treino.html
+++ b/treino.html
@@ -167,7 +167,7 @@
     </section>
 
 
-        <a href="#"><section class="imagem" id="img01">
+        <a href="index.html"><section class="imagem" id="img01">
 
             <p class="treino">Voltar</p>
 
