--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="normal">
         <p>
-            O Manual do Maromba Natural trás para você<br>
+            O Maromba Natural trás para você<br>
             estratégias pra o seu desenvolvimento!
         </p>
     </section>
