--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         
         
-        <a href="#"><section class="imagem" id="img02">
+        <a href="dieta.html"><section class="imagem" id="img02">
 
             <p class="dieta">Dieta</p>
 
@@ -59,7 +59,7 @@
 
         </section>
 
-        <a href="#"><section class="imagem" id="img03">
+        <a href="suplementos.html"><section class="imagem" id="img03">
 
             <p class="suplemento">Suplementação</p>
 
