--- a/suplementos.html
+++ b/suplementos.html
@@ -74,14 +74,14 @@
         }
 
         section#img01 {
-            background-image: url('img01.png');
+            background-image: url('suplementos.jpg');
             background-position: center center;
             background-size: cover;
 
         }
 
         section#img02 {
-            background-image: url('marmita-fitness-receitas-magnus-personal.webp');
+            background-image: url('suplementos.jpg');
             background-position: center center;
             background-size: cover;
 
@@ -167,7 +167,7 @@
     </section>
 
 
-        <a href="index.html"><section class="imagem" id="img02.png">
+        <a href="index.html"><section class="imagem" id="img01">
 
             <p class="Suplementos">Voltar</p>
 
