--- a/dieta.html
+++ b/dieta.html
@@ -74,7 +74,7 @@
         }
 
         section#img01 {
-            background-image: url('img01.png');
+            background-image: url('marmita-fitness-receitas-magnus-personal.webp');
             background-position: center center;
             background-size: cover;
 
