--- a/dieta.html
+++ b/dieta.html
@@ -81,7 +81,7 @@
         }
 
         section#img02 {
-            background-image: url('marmita-fitness-receitas-magnus-personal.webp');
+            background-image: url('img01.png');
             background-position: center center;
             background-size: cover;
 
@@ -247,9 +247,9 @@
         </section>
         
         
-        <a href="#"><section class="imagem" id="img02">
+        <a href="treino.html"><section class="imagem" id="img02">
 
-            <p class="dieta">Dieta</p>
+            <p class="dieta">Treino</p>
 
 
         </section></a>
