--- a/dieta.html
+++ b/dieta.html
@@ -263,7 +263,7 @@
 
         </section>
 
-        <a href="#"><section class="imagem" id="img03">
+        <a href="suplementos.html"><section class="imagem" id="img03">
 
             <p class="suplemento">Suplementação</p>
 
