--- a/suplementos.html
+++ b/suplementos.html
@@ -153,7 +153,7 @@
     <header>
 
         <h1>
-            Treino
+            Suplementação
         </h1>
 
         <p>Maromba Natural</p>
@@ -247,9 +247,9 @@
         </section>
         
         
-        <a href="#"><section class="imagem" id="img02">
+        <a href="treino.html"><section class="imagem" id="img02">
 
-            <p class="dieta">Dieta</p>
+            <p class="dieta">Treino</p>
 
 
         </section></a>
@@ -263,9 +263,9 @@
 
         </section>
 
-        <a href="#"><section class="imagem" id="img03">
+        <a href="dieta.html"><section class="imagem" id="img03">
 
-            <p class="suplemento">Suplementação</p>
+            <p class="suplemento">Dieta</p>
 
         </section></a>
 
