--- a/suplementos.html
+++ b/suplementos.html
@@ -74,14 +74,14 @@
         }
 
         section#img01 {
-            background-image: url('suplementos.jpg');
+            background-image: url('img01.png');
             background-position: center center;
             background-size: cover;
 
         }
 
         section#img02 {
-            background-image: url('suplementos.jpg');
+            background-image: url('img2.png');
             background-position: center center;
             background-size: cover;
 
