--- a/suplementos.html
+++ b/suplementos.html
@@ -74,21 +74,21 @@
         }
 
         section#img01 {
-            background-image: url('img01.png');
+            background-image: url('suplementos.jpg');
             background-position: center center;
             background-size: cover;
 
         }
 
         section#img02 {
-            background-image: url('img2.png');
+            background-image: url('img01.png');
             background-position: center center;
             background-size: cover;
 
         }
 
         section#img03 {
-            background-image: url('suplementos.jpg');
+            background-image: url('marmita-fitness-receitas-magnus-personal.webp');
             background-position: center center;
             background-size: cover;
 
