--- a/suplementos.html
+++ b/suplementos.html
@@ -162,7 +162,7 @@
 
     <section class="normal">
         
-        <a href="#"><img src="logoinsta4.png"></a>
+        <a href="#"><img src="img/sitehn01.png"></a>
 
     </section>
 
