--- a/dieta.html
+++ b/dieta.html
@@ -276,7 +276,7 @@
         </section>
 
     <footer>
-        <p>Site criado por <a href="#">Lucas Oliveira</a></p>
+        <p>Site criado por <a href="https://www.instagram.com/lucas.weliton_/">Lucas Oliveira</a></p>
     </footer>
     
 </body>
