--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <section class="normal">
 
-            <a href="https://www.instagram.com/sputniksuplementos/"><img src="img/sitehn01.png"></a>
+            <a href="https://www.instagram.com/sputniksuplementos/"><img src=""></a>
 
 
         </section>
@@ -72,7 +72,7 @@
         </section>
 
     <footer>
-        <p>Site criado por <a href="#">Lucas Oliveira</a></p>
+        <p>Site criado por <a href="https://www.instagram.com/lucas.weliton_/">Lucas Oliveira</a></p>
     </footer>
     
 </body>
