--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <header>
 
         <h1>
-            Maromba Natural
+            Hipertrofia Natural
         </h1>
 
-        <p>Manual de Sobrevivência Maromba</p>
+        <p>Manual de Sobrevivência do Maromba Natural</p>
 
     </header>
 
     <section class="normal">
         <p>
-            O Maromba Natural trás para você<br>
+            O Hipertrofia Natural trás para você<br>
             estratégias pra o seu desenvolvimento!
         </p>
     </section>
