--- a/dieta.html
+++ b/dieta.html
@@ -243,9 +243,9 @@
 
         </section>
 
-        <a href="dieta.html"><section class="imagem" id="img03">
+        <a href="dieta.html"><section class="imagem" id="img01">
 
-            <p class="suplemento">Dieta</p>
+            <p class="suplemento">Suplementação</p>
 
         </section></a>
 
@@ -255,9 +255,9 @@
             </p>
         </section>
 
-        <a href="index.html"><section class="imagem" id="img01">
+        <a href="index.html"><section class="imagem" id="img03">
 
-            <p class="Suplementos">Voltar</p>
+            <p class="suplemento">Voltar</p>
 
         </section></a>
 
