--- a/dieta.html
+++ b/dieta.html
@@ -227,7 +227,7 @@
         </section>
         
         
-        <a href="treino.html"><section class="imagem" id="img02">
+        <a href="treino.html"><section class="imagem" id="C-Bum.jpg">
 
             <p class="dieta">Treino</p>
 
