--- a/treino.html
+++ b/treino.html
@@ -74,14 +74,14 @@
         }
 
         section#img01 {
-            background-image: url('img01.png');
+            background-image: url('img/C-bum.jpg');
             background-position: center center;
             background-size: cover;
 
         }
 
         section#img02 {
-            background-image: url('marmita-fitness-receitas-magnus-personal.webp');
+            background-image: url('img/02.jpg');
             background-position: center center;
             background-size: cover;
 
