--- a/suplementos.html
+++ b/suplementos.html
@@ -81,14 +81,14 @@
         }
 
         section#img02 {
-            background-image: url('img01.png');
+            background-image: url('img/C-bum.jpg');
             background-position: center center;
             background-size: cover;
 
         }
 
         section#img03 {
-            background-image: url('marmita-fitness-receitas-magnus-personal.webp');
+            background-image: url('img/02.jpg');
             background-position: center center;
             background-size: cover;
 
