--- a/treino.html
+++ b/treino.html
@@ -148,6 +148,11 @@
             align-items: center;
         }
 
+        .st1 {
+            font-size: 12px;
+            font-weight: lighter;
+        }
+
     </style>
 
     
@@ -181,8 +186,8 @@
                 Hipertrofia Natural
             </h1>
 
-            <h2>
-                Melhor Conselho para Bodybuilders Naturais
+            <h2 class="st1">
+                Melhor Conselho para Atletas Naturais
             </h2>
 
             <p class="ptreino">
@@ -191,7 +196,7 @@
                 Pessoas que utilizam esteróides aparentam crescer independentemente do que fazem na academia, algo que não costuma ser fácil para quem é natural. Se você é natural e está tentando construir um físico, siga as dicas abaixo que irá lhe ajudar a colocar no caminho certo para ganho de massa muscular.
             </p>
 
-            <h2>
+            <h2 class="st">
                 Recuperação é a Chave
             </h2>
 
@@ -201,7 +206,7 @@
                 Depois de ter sua dieta em mãos, sempre a siga para garantir a recuperação da sua massa muscular. Sempre tenha em mente que você enquanto treina está quebrando fibras musculares e construindo músculos durante seu descanso.
             </p>
 
-            <h2>Forma Acima do Ego durante o Treino</h2>
+            <h2 class="st">Forma Acima do Ego durante o Treino</h2>
 
             <p class="ptreino">
                 Enquanto as pessoas que usam anabolizantes ganham massa muscular com facilidade apenas entrando na academia, confiar apenas na carga que você treina não irá garantir que você ganhe massa muscular já que você não toma anabolizantes.<br>
@@ -209,7 +214,7 @@
                 Bodybuilding é diferente de powerlifting. No bodybuilding, não importa quanto peso está na sua barra, a qualidade e a forma em que é executado é o que realmente irá lhe trazer resultados. Estabelecendo uma conexão entre mente e músculo durante seus sets e repetições irá melhorar seu recrutamento muscular e seu pump.
             </p>
 
-            <h2>
+            <h2 class="st">
                 Mudar o número de Repetições
             </h2>
 
@@ -219,7 +224,7 @@
                 Experimente mudar o número de repetiçōes e sets enquanto executa seus treinos depois tenta mudar a combinação de treinos. Não tenha medo de ir até 50 repetições e 10 sets enquanto executa um exercício.
             </p>
 
-            <h2>
+            <h2 class="st">
                 Não treine até a falha
             </h2>
 
@@ -229,7 +234,7 @@
                 Você deve escolher uma carga que seja desafiador para seus músculos mas deve evitar ir até a falha. Enquanto estiver executando um exercício sempre deixe 1-2 repetições na reserva, isso vai reduzir suas chances de overtraining.
             </p>
             
-            <h2>
+            <h2 class="st">
                 Pense fora da “caixinha”
             </h2>
 
