--- a/treino.html
+++ b/treino.html
@@ -149,8 +149,15 @@
         }
 
         .st1 {
-            font-size: 12px;
-            font-weight: lighter;
+            font-size: 18px;
+            font-weight: bolder;
+            
+        }
+
+        .st {
+            font-size: 19px;
+            text-align: left;
+            padding-left: 25px;
         }
 
     </style>
