--- a/suplementos.html
+++ b/suplementos.html
@@ -81,7 +81,7 @@
         }
 
         section#img02 {
-            background-image: url('img/C-bum.jpg');
+            background-image: url('img/cbum2.jpg');
             background-position: center center;
             background-size: cover;
 
