--- a/dieta.html
+++ b/dieta.html
@@ -74,7 +74,7 @@
         }
 
         section#img01 {
-            background-image: url('img/C-bum.jpg');
+            background-image: url('img/cbum2.jpg');
             background-position: center center;
             background-size: cover;
 
