--- a/dieta.html
+++ b/dieta.html
@@ -243,7 +243,7 @@
 
         </section>
 
-        <a href="dieta.html"><section class="imagem" id="img02">
+        <a href="suplementos.html"><section class="imagem" id="img02">
 
             <p class="suplemento">Suplementação</p>
 
