--- a/treino.html
+++ b/treino.html
@@ -65,12 +65,15 @@
             background-color: rgb(255, 255, 255);
             color: black;
             text-align: center;
+            padding-bottom: none;
         }
 
         section.imagem {
             background-color: rgba(0, 0, 0, 0.863);
             color: rgb(255, 255, 255);
             background-attachment: fixed;
+            padding-top: none;
+            margin-top: none;
         }
 
         section#img01 {
@@ -178,7 +181,7 @@
 
 
 
-    </section>
+    <section>
 
 
         <a href="index.html"><section class="imagem" id="img01">
