--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
     </header>
 
     <section class="normal">
-        <p>
-            O Hipertrofia Natural trás para você<br>
-            estratégias pra o seu desenvolvimento!
+        <p class="p1">
+            Dicas de Treino, Dieta e Suplementação
         </p>
+
+        <p class="p2">
+            Para o Atleta Natural
+        </p>
+
+
     </section>
 
 
