--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
     </header>
 
     <section class="normal">
-        <p class="p1">
-            Dicas de Treino, Dieta e Suplementação
-        </p>
 
-        <p class="p2">
-            Para o Atleta Natural
-        </p>
+        <div class="p">
+            <p class="p1">
+                Dicas de Treino, Dieta e Suplementação
+            </p>
+
+            <p class="p2">
+                Para o Atleta Natural
+            </p>
+        </div>
 
 
     </section>
