--- a/suplementos.html
+++ b/suplementos.html
@@ -158,23 +158,27 @@
         .p {
             background-color: rgba(83, 83, 83, 0.37);
             border-radius: 5px;
-            width: 400px;
-            height: 100px;
+            width: 305px;
+            height: 120px;
             position: relative;
             margin-left: auto;
             margin-right: auto;
-            padding: 0%;
+            
+            text-align: center;
         }
 
         .p1 {
             text-align: center;
+            padding-top: 10px;
             padding-bottom: 0%;
+
             font-size: 22px;
         }
 
         .p2 {
             text-align: center;
             padding-top: 0%;
+            padding-bottom: 10px;
         }
 
     </style>
