--- a/suplementos.html
+++ b/suplementos.html
@@ -88,7 +88,7 @@
         }
 
         section#img03 {
-            background-image: url('img/C-bum.jpg');
+            background-image: url('img/cbum2.jpg');
             background-position: center center;
             background-size: cover;
 
