--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section class="normal">
 
-            <a href="https://www.instagram.com/sputniksuplementos/"><div class="link"><img src="img/favicon.ico"></div></a>
+            <div class="link"><img src="img/favicon.ico"></div></a>
 
 
         </section>
@@ -63,7 +63,7 @@
 
         <section class="normal">
 
-            <a href="https://www.instagram.com/sputniksuplementos/"><div class="link"><img src="img/favicon.ico"></div></a>
+            <a href="https://www.instagram.com/sputniksuplementos/"><div class="link"><img src="img/ARTESITE05.png"></div></a>
 
         </section>
 
@@ -75,7 +75,7 @@
 
         <section class="normal">
 
-            <a href="https://www.instagram.com/sputniksuplementos/"><div class="link"><img src="img/favicon.ico"></div></a>
+            <div class="link"><img src="img/favicon.ico"></div></a>
             
         </section>
 
