--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </section></a>
 
-        <section class="normal">
+        <section class="normal2">
 
             <div class="link"><img src="img/favicon.ico"></div></a>
 
